@@ -4,6 +4,7 @@ This is a security and maintenance release of the TuleapWikiFarm 1.1 branch.
 
 === Changes since TuleapWikiFarm 1.1.1 ===
 * Localisation updates.
+* (Tuleap#29988) Use different approarch when terminating sessions for all users
 
 = TuleapWikiFarm 1.1.1 =
 
